Deck route done. I was trying to translate the card name from english to portuguese, but I couldnt yet. Next step is PUT route to edit the cards of an specific user.

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-translate</artifactId>
+			<version>v2-rev51-1.21.0</version>
+	</dependency>
 	
 	
 	</dependencies>
