--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/zappts?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=trybe123
+spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net/heroku_b096a12bb9857e5?reconnect=true&createDatabaseIfNotExist=true
+spring.datasource.username=be95ac10b80c9d
+spring.datasource.password=56afacc5
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
