--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net/heroku_b096a12bb9857e5?reconnect=true&createDatabaseIfNotExist=true
+spring.datasource.url=${CLEARDB_DATABASE_UR}
 spring.datasource.username=be95ac10b80c9d
 spring.datasource.password=56afacc5
 spring.jpa.show-sql=true
