--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${CLEARDB_DATABASE_UR}
-spring.datasource.username=be95ac10b80c9d
-spring.datasource.password=56afacc5
+spring.datasource.url=${CLEARDB_DATABASE_URL}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
